Fix spaces and alignment

--- a/assets/css/virtual.css
+++ b/assets/css/virtual.css
@@ -169,6 +169,10 @@ a:active {
   border-radius: 40px !important;
 }
 
+#hero-name {
+  text-align: center;
+}
+
 /* Floating Action Button */
 .btn-fab {
   display: inline-block;
